--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -17,13 +17,13 @@ deployment.jarurl=${dist.jar}
 deployment.method=NONE
 deployment.override.jarurl=false
 dist.dir=dist/${config.active}
-dist.jad=BTIS.jad
-dist.jar=BTIS.jar
+dist.jad=TIS.jad
+dist.jar=TIS.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 dll.dir=dll
 extra.classpath=
-file.reference.builtin.ks=${netbeans.user}/config/j2me/builtin.ks
+file.reference.builtin.ks-1=${netbeans.user}/config/j2me/builtin.ks
 file.reference.jsonme.jar=lib/jsonme.jar
 filter.exclude.tests=true
 filter.excludes=
@@ -53,8 +53,8 @@ manifest.apipermissions=MIDlet-Permissions: javax.microedition.io.Connector.file
 manifest.file=manifest.mf
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: BTIS,/images/mapunity.png,com.mapunity.tracker.Mapunity\n
-manifest.others=user-Longitude: 77.60879\nMIDlet-Vendor: Mapunity\nuser-Latitude: 12.969802\nMIDlet-Info-URL: http://www.mapunity.in\nMIDlet-Name: BTIS\nMIDlet-Icon: /images/mapunity.png\nMIDlet-Description: Geography of development\nMIDlet-Version: 0.20\n
+manifest.midlets=MIDlet-1: TIS,/images/mapunity.png,com.mapunity.tracker.Mapunity\n
+manifest.others=user-Longitude: 77.60879\nMIDlet-Vendor: Mapunity\nuser-Latitude: 12.969802\nMIDlet-Info-URL: http://www.mapunity.in\nMIDlet-Name: TIS\nMIDlet-Icon: /images/mapunity.png\nMIDlet-Description: Geography of development\nMIDlet-Version: 0.20\n
 manifest.pushregistry=
 name=GPSTracker
 no.dependencies=false
@@ -142,7 +142,7 @@ semc.private.key.password=
 semc.private.key.path=
 sign.alias=trusted
 sign.enabled=false
-sign.keystore=${file.reference.builtin.ks}
+sign.keystore=${file.reference.builtin.ks-1}
 src.dir=src
 use.emptyapis=true
 use.preprocessor=true
